[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "rfi"
author = "William Quelho Ferreira"
author-email = "wqferr@gmail.com"
home-page = "https://github.com/wqferr/rfi"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

[tool.flit.scripts]
rfi = "rfi:main"
